# lightrider

./: .gitignore  Cargo.toml  NOTES.md
.cargo/: config.toml
client/: Cargo.toml
client/src/: lib.rs
client/src/camera/: mod.rs
client/src/collision/: death.rs  mod.rs
client/src/debug/: mod.rs
client/src/inputs/: mod.rs
client/src/menu/: mod.rs
client/src/network/: config.rs  connect.rs  inputs.rs  interpolation.rs  mod.rs
client/src/render/: camera.rs  food.rs  mod.rs  snake.rs
server/: Cargo.toml
server/certificates/: cert.pem  key.pem
server/src/: lib.rs
server/src/collision/: collider.rs  death.rs  layers.rs  mod.rs
server/src/debug/: mod.rs  snake.rs
server/src/food/: mod.rs
server/src/network/: config.rs  connection_events.rs  events.rs  inputs.rs  mod.rs
server/src/network/bundle/: mod.rs  player.rs  snake.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/collision/: collider.rs  layers.rs  mod.rs
shared/src/map/: mod.rs
shared/src/movement/: mod.rs
shared/src/network/: config.rs  mod.rs
shared/src/network/bundle/: food.rs  mod.rs  player.rs  snake.rs
shared/src/network/protocol/: mod.rs
shared/src/network/protocol/channels/: mod.rs
shared/src/network/protocol/components/: common.rs  food.rs  mod.rs  player.rs  snake.rs
shared/src/network/protocol/inputs/: game.rs  mod.rs  movement.rs
shared/src/network/protocol/messages/: food.rs  mod.rs  snake.rs
shared/src/utils/: geometry.rs  mod.rs  query.rs  rand.rs
