[package]
name = "server"
version = "0.1.0"
authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "Client for the lightrider game"
readme = "README.md"
repository = "https://github.com/cBournhonesque/lightrider"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
publish = false


[dependencies]
shared = { path = "../shared" }
lightyear.workspace = true
leafwing-input-manager.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bevy.workspace = true
clap.workspace = true
bevy_xpbd_2d.workspace = true
parry2d = "0.13.6"
derive_more = { version = "0.99", features = ["add", "mul"] }
bevy-inspector-egui = "0.22.1"
cfg-if = "1.0.0"

[target."cfg(not(target_family = \"wasm\"))".dependencies]
tokio = { version = "1.34", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
] }

[target."cfg(target_family = \"wasm\")".dependencies]
tokio = { version = "1.34", features = ["rt"] }